--- a/static/wangEditor/wangEditor.css
+++ b/static/wangEditor/wangEditor.css
@@ -5,6 +5,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 .w-e-toolbar *,
 .w-e-text-container *,
 .w-e-menu-panel * {
@@ -12,6 +13,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 .w-e-clear-fix:after {
   content: "";
   display: table;
@@ -27,6 +29,7 @@
   border-right-color: #ccc;
   border-bottom-color: #ccc;
 }
+
 .w-e-toolbar .w-e-droplist .w-e-dp-title {
   text-align: center;
   color: #999;
@@ -34,28 +37,34 @@
   border-bottom: 1px solid #f1f1f1;
   font-size: 13px;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-list {
   list-style: none;
   line-height: 1;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-list li.w-e-item {
   color: #333;
   padding: 5px 0;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-list li.w-e-item:hover {
   background-color: #f1f1f1;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-block {
   list-style: none;
   text-align: left;
   padding: 5px;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-block li.w-e-item {
   display: inline-block;
   *display: inline;
   *zoom: 1;
   padding: 3px 5px;
 }
+
 .w-e-toolbar .w-e-droplist ul.w-e-block li.w-e-item:hover {
   background-color: #f1f1f1;
 }
@@ -66,6 +75,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 [class^="w-e-icon-"],
 [class*=" w-e-icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -80,84 +90,111 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .w-e-icon-close:before {
   content: "\f00d";
 }
+
 .w-e-icon-upload2:before {
   content: "\e9c6";
 }
+
 .w-e-icon-trash-o:before {
   content: "\f014";
 }
+
 .w-e-icon-header:before {
   content: "\f1dc";
 }
+
 .w-e-icon-pencil2:before {
   content: "\e906";
 }
+
 .w-e-icon-paint-brush:before {
   content: "\f1fc";
 }
+
 .w-e-icon-image:before {
   content: "\e90d";
 }
+
 .w-e-icon-play:before {
   content: "\e912";
 }
+
 .w-e-icon-location:before {
   content: "\e947";
 }
+
 .w-e-icon-undo:before {
   content: "\e965";
 }
+
 .w-e-icon-redo:before {
   content: "\e966";
 }
+
 .w-e-icon-quotes-left:before {
   content: "\e977";
 }
+
 .w-e-icon-list-numbered:before {
   content: "\e9b9";
 }
+
 .w-e-icon-list2:before {
   content: "\e9bb";
 }
+
 .w-e-icon-link:before {
   content: "\e9cb";
 }
+
 .w-e-icon-happy:before {
   content: "\e9df";
 }
+
 .w-e-icon-bold:before {
   content: "\ea62";
 }
+
 .w-e-icon-underline:before {
   content: "\ea63";
 }
+
 .w-e-icon-italic:before {
   content: "\ea64";
 }
+
 .w-e-icon-strikethrough:before {
   content: "\ea65";
 }
+
 .w-e-icon-table2:before {
   content: "\ea71";
 }
+
 .w-e-icon-paragraph-left:before {
   content: "\ea77";
 }
+
 .w-e-icon-paragraph-center:before {
   content: "\ea78";
 }
+
 .w-e-icon-paragraph-right:before {
   content: "\ea79";
 }
+
 .w-e-icon-terminal:before {
   content: "\f120";
 }
+
 .w-e-icon-page-break:before {
   content: "\ea68";
 }
+
 .w-e-icon-cancel-circle:before {
   content: "\ea0d";
 }
@@ -169,21 +206,26 @@
   padding: 0 5px;
   /* 单个菜单 */
 }
+
 .w-e-toolbar .w-e-menu {
   position: relative;
   text-align: center;
   padding: 5px 10px;
   cursor: pointer;
 }
+
 .w-e-toolbar .w-e-menu i {
   color: #999;
 }
+
 .w-e-toolbar .w-e-menu:hover i {
   color: #333;
 }
+
 .w-e-toolbar .w-e-active i {
   color: #1e88e5;
 }
+
 .w-e-toolbar .w-e-active:hover i {
   color: #1e88e5;
 }
@@ -200,6 +242,7 @@
   /* 为 emotion panel 定制的样式 */
   /* 上传图片的 panel 定制样式 */
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-close {
   position: absolute;
   right: 0;
@@ -209,9 +252,11 @@
   cursor: pointer;
   color: #999;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-close:hover {
   color: #333;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-title {
   list-style: none;
   display: -webkit-box;
@@ -221,6 +266,7 @@
   margin: 2px 10px 0 10px;
   border-bottom: 1px solid #f1f1f1;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-title .w-e-item {
   padding: 3px 5px;
   color: #999;
@@ -229,31 +275,37 @@
   position: relative;
   top: 1px;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-title .w-e-active {
   color: #333;
   border-bottom: 1px solid #333;
   cursor: default;
   font-weight: 700;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content {
   padding: 10px 15px 10px 15px;
   font-size: 16px;
   /* 输入框的样式 */
   /* 按钮的样式 */
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content input:focus,
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content textarea:focus,
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content button:focus {
   outline: none;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content textarea {
   width: 100%;
   border: 1px solid #ccc;
   padding: 5px;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content textarea:focus {
   border-color: #1e88e5;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content input[type=text] {
   border: none;
   border-bottom: 1px solid #ccc;
@@ -262,18 +314,22 @@
   color: #333;
   text-align: left;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content input[type=text].small {
   width: 30px;
   text-align: center;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content input[type=text].block {
   display: block;
   width: 100%;
   margin: 10px 0;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content input[type=text]:focus {
   border-bottom: 2px solid #1e88e5;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button {
   font-size: 14px;
   color: #1e88e5;
@@ -283,28 +339,35 @@
   cursor: pointer;
   border-radius: 3px;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button.left {
   float: left;
   margin-right: 10px;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button.right {
   float: right;
   margin-left: 10px;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button.gray {
   color: #999;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button.red {
   color: #c24f4a;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container button:hover {
   background-color: #f1f1f1;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-panel-tab-content .w-e-button-container:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-emoticon-container .w-e-item {
   cursor: pointer;
   font-size: 18px;
@@ -313,9 +376,11 @@
   *display: inline;
   *zoom: 1;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-up-img-container {
   text-align: center;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-up-img-container .w-e-up-btn {
   display: inline-block;
   *display: inline;
@@ -325,6 +390,7 @@
   font-size: 60px;
   line-height: 1;
 }
+
 .w-e-text-container .w-e-panel-container .w-e-up-img-container .w-e-up-btn:hover {
   color: #333;
 }
@@ -332,6 +398,7 @@
 .w-e-text-container {
   position: relative;
 }
+
 .w-e-text-container .w-e-progress {
   position: absolute;
   background-color: #1e88e5;
@@ -339,10 +406,12 @@
   left: 0;
   height: 1px;
 }
+
 .w-e-text {
   padding: 0 10px;
   overflow-y: scroll;
 }
+
 .w-e-text p,
 .w-e-text h1,
 .w-e-text h2,
@@ -354,10 +423,12 @@
   margin: 10px 0;
   line-height: 1.5;
 }
+
 .w-e-text ul,
 .w-e-text ol {
   margin: 10px 0 10px 20px;
 }
+
 .w-e-text blockquote {
   display: block;
   border-left: 8px solid #d0e5f2;
@@ -367,6 +438,7 @@
   font-size: 100%;
   background-color: #f1f1f1;
 }
+
 .w-e-text code {
   display: inline-block;
   *display: inline;
@@ -376,35 +448,56 @@
   padding: 3px 5px;
   margin: 0 3px;
 }
+
 .w-e-text pre code {
   display: block;
 }
+
 .w-e-text table {
   border-top: 1px solid #ccc;
   border-left: 1px solid #ccc;
 }
+
 .w-e-text table td,
 .w-e-text table th {
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
   padding: 3px 5px;
 }
+
 .w-e-text table th {
   border-bottom: 2px solid #ccc;
   text-align: center;
 }
+
 .w-e-text:focus {
   outline: none;
 }
+
 .w-e-text img {
   cursor: pointer;
 }
+
 .w-e-text img:hover {
   box-shadow: 0 0 5px #333;
 }
+
 .w-e-text img.w-e-selected {
   border: 2px solid #1e88e5;
 }
+
 .w-e-text img.w-e-selected:hover {
   box-shadow: none;
+}
+
+.w-e-toolbar .w-e-menu .color-block {
+  display: block;
+  float: left;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  padding: 2px;
+  border-radius: 2px;
+  text-decoration: underline;
+  border: 1px solid #eee;
 }
